k8s/production/websocket-event-publisher/devnet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-event-publisher-devnet-service
  namespace: chicmoz-prod
spec:
  selector:
    app: websocket-event-publisher-devnet-label
  ports:
    - name: websocket
      protocol: TCP
      port: 80
      targetPort: websocket-port
