k8s/production/websocket-event-publisher/devnet/backendtrafficpolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: websocket-event-publisher-devnet
  namespace: chicmoz-prod
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: websocket-event-publisher-devnet
  timeout:
    http:
      requestTimeout: 3600s
