k8s/production/websocket-event-publisher/devnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: websocket-event-publisher-devnet
  namespace: chicmoz-prod
spec:
  parentRefs:
    - name: aztecscan-gateway
      sectionName: ws-devnet-http
    - name: aztecscan-gateway
      sectionName: ws-devnet-https
    - name: aztecscan-gateway
      sectionName: ws-devnet-beta-http
    - name: aztecscan-gateway
      sectionName: ws-devnet-beta-https
  hostnames:
    - ws.devnet.aztecscan.xyz
    - ws.devnet.beta.aztecscan.xyz
  rules:
    - backendRefs:
        - name: websocket-event-publisher-devnet-service
          port: 80
